[할일] #empty 섹션7 Remote Git Repository - uri 값을 로컬 폴더 -> git 주소로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,4 +8,7 @@ spring:
     config:
       server:
         git:
-          uri: file:///git-local-repo
+          uri: https://github.com/sshwn/spring-cloud-config-08.git
+#          uri: file:///git-local-repo
+#          username: private 일 경우
+#          password: priavte 일 경우
