[할일] #empty 섹션8 Spring Cloud Bus 테스트 - pom.xml amqp, bootstrap, actuator 추가 - application.yml 수정 (rabbitmq 및 busrefresh 등록)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,11 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   profiles:
     active: native
   cloud:
@@ -16,3 +21,9 @@ spring:
 #          uri: file:///git-local-repo
 #          username: private 일 경우
 #          password: priavte 일 경우
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, busrefresh
